--- a/Front-Studyhub/src/index.html
+++ b/Front-Studyhub/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontStudyhub</title>
+  <title>StudyHub - Inicia sesión</title>
+  <meta name="description" content="StudyHub - Inicia sesión">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/mini-logo.png">
 </head>
 <body>
   <app-root></app-root>
